# OpenZz

./: ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
doc/: Makefile.in
doc/src/: Makefile.in
src/: Makefile.am  Makefile.in  action.c  action.h  avl.c  avl.h  defopen.c  dumpnet.c  err.c  err.h  interface.c  kernel.c  kernel.h  lazy.c  list.c  param.c  param.h  parse.c  parse.h  printz.c  printz.h  rule.c  rule.h  scope.c  scope.h  source.c  source.h  sys.c  sys.h  table.c  util.c  zkernel.c  zlex.c  zlex.h  zsys.c  zz.c  zz.h  zzbind.h  zzi.c
testsuite/: Makefile.am  Makefile.in  tagdtor.zz  zz_test.sh
